server frm scratch re init sanity corrected schema

--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-sanity-project",
+  "name": "sanity-project-for-shareme",
   "private": true,
   "version": "1.0.0",
   "main": "package.json",
